# CppTemplate

./: CMakeLists.txt  cmake_build_executables_linux.sh  readme.md
templateApp/: CMakeLists.txt
templateApp/src/: myClass.cpp  myClass.h
templateApp/unittests/: CMakeLists.txt
templateApp/unittests/src/: main.cpp
